# instmodel-rust-inference

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
benchmarks/: tensorflow_benchmark.py
benchmarks/gpu/: bulk_inference.wgsl  gpu_benchmark.rs
configs/: dot_product.json  element_wise_buffer_ops.json
src/: activation.rs  instruction_model.rs  instruction_model_info.rs  lib.rs  parallel_predict.rs  utils.rs
src/benchmarks/: benchmark_errors.rs  benchmark_runner.rs  benchmark_types.rs  mod.rs  performance_metrics.rs
src/benchmarks/instructions/: mod.rs
src/benchmarks/instructions/dot_product/: framework.rs  manual.rs  mod.rs
src/benchmarks/instructions/element_wise_buffer_ops/: framework.rs  manual.rs  mod.rs
src/errors/: instruction_model_error.rs  mod.rs  parallel_predict_error.rs  validation_error.rs
src/gpu/: errors.rs  gpu_instruction.rs  gpu_model.rs  mod.rs
src/gpu/shaders/: activations.wgsl  instmodel.wgsl  mod.rs
src/gpu/shaders/instructions/: activation.wgsl  copy.wgsl  dot.wgsl  elem_wise_add.wgsl  elem_wise_mul.wgsl
src/high_performance_execution_utils/: mod.rs
src/instructions/: activation_instruction.rs  add_buffer_heads_instruction.rs  attention_instruction.rs  copy_instruction.rs  copy_masked_instruction.rs  dot_instruction.rs  dot_instruction_optimized.rs  elem_wise_add_instruction.rs  elem_wise_buffers_add_instruction.rs  elem_wise_buffers_mul_instruction.rs  elem_wise_mul_instruction.rs  map_transform_instruction.rs  mod.rs  multiply_buffer_heads_instruction.rs  reduce_sum_instruction.rs
src/utils/: dot.rs
tests/: error_tests.rs  gpu_inference_test.rs  instruction_model_test.rs  instruction_sequence_computation_loader_test.rs  parallel_predict_test.rs
tests/shaders/: test_shader.wgsl
