[package]
name = "instmodel-rust-inference"
version = "0.2.0"
edition = "2024"
license = "MIT"

[lib]
name = "instmodel_rust_inference"
path = "src/lib.rs"

[[bin]]
name = "benchmark"
path = "benchmarks/bin/benchmark.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
pretty_assertions = "1.4"
